--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "*.js",
+        "src": "./client.js",
         "use": "@vercel/node"
       }
       
